--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,11 +1,9 @@
 ---
-import { SITE_URL } from '../config';
-
 const today = new Date();
 ---
 
 <footer>
-	&copy; {today.getFullYear()} {SITE_URL} YOUR NAME HERE. All rights reserved.
+	&copy; {today.getFullYear()} YOUR NAME HERE. All rights reserved.
 </footer>
 <style>
 	footer {
